--- a/pools_specific_EDA/Open River/Open River KMapper.ipynb
+++ b/pools_specific_EDA/Open River/Open River KMapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "based-leadership",
+   "id": "informed-cosmetic",
    "metadata": {},
    "source": [
     "### Imports"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "atmospheric-suicide",
+   "id": "qualified-zoning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "great-species",
+   "id": "funny-commander",
    "metadata": {},
    "source": [
     "### Functions"
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "satisfied-insertion",
+   "id": "ethical-organizer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surface-broadcasting",
+   "id": "brown-labor",
    "metadata": {},
    "source": [
     "### Load data"
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "historic-correction",
+   "id": "rotary-fishing",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "grave-acting",
+   "id": "centered-vaccine",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "removed-faith",
+   "id": "monetary-times",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "immediate-student",
+   "id": "blocked-respondent",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "quarterly-freeware",
+   "id": "controlling-photographer",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "sudden-australia",
+   "id": "relative-tiffany",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "raised-magazine",
+   "id": "intelligent-reserve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "cultural-culture",
+   "id": "wound-supervision",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reliable-samoa",
+   "id": "southwest-amount",
    "metadata": {},
    "source": [
     "Saving all outputs to json"
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "structural-fellowship",
+   "id": "industrial-morning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alleged-revision",
+   "id": "painted-valve",
    "metadata": {},
    "source": [
     "Load mapper data"
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "knowing-street",
+   "id": "english-cemetery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "prostate-result",
+   "id": "ordinary-series",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driven-costume",
+   "id": "arabic-parliament",
    "metadata": {},
    "source": [
     "Pick one output to analyze"
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "affecting-cookie",
+   "id": "documentary-ending",
    "metadata": {},
    "outputs": [
     {
@@ -704,89 +704,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fuzzy-anchor",
+   "id": "moving-third",
    "metadata": {},
    "source": [
-    "Function to "
+    "Function to return a nested list of connected components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "fourth-commissioner",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "160\n",
-      "54\n"
-     ]
-    }
-   ],
-   "source": [
-    "simplices = output.get(\"simplices\")\n",
-    "# Pick out the edges\n",
-    "edges = [item for item in simplices if len(item)==2]\n",
-    "# Pick out all nodes\n",
-    "nodes = output.get(\"nodes\").keys()\n",
-    "print(len(simplices))\n",
-    "print(len(edges))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "divine-basket",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Unpacks the list of lists to get every node that is connected to at least one other node with an edge\n",
-    "connected_nodes = [node for sublist in edges for node in sublist]\n",
-    "# Pick out the nodes that are its own connected component (not a connected node)\n",
-    "singles = [[node] for node in nodes if node not in connected_nodes]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "fifth-double",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['cube0_cluster3'],\n",
-       " ['cube0_cluster4'],\n",
-       " ['cube0_cluster5'],\n",
-       " ['cube0_cluster6'],\n",
-       " ['cube2_cluster2'],\n",
-       " ['cube2_cluster18'],\n",
-       " ['cube3_cluster10'],\n",
-       " ['cube4_cluster6'],\n",
-       " ['cube4_cluster9'],\n",
-       " ['cube5_cluster10'],\n",
-       " ['cube9_cluster1'],\n",
-       " ['cube9_cluster2'],\n",
-       " ['cube9_cluster3'],\n",
-       " ['cube9_cluster4'],\n",
-       " ['cube9_cluster6']]"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "singles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "boxed-chapel",
+   "execution_count": 127,
+   "id": "activated-premium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,76 +749,40 @@
     "            components.append([a, b])\n",
     "            \n",
     "    # Add the singles into the components\n",
-    "    print(\"Number of singles,\",len(singles))\n",
+    "    print(\"Number of singles:\",len(singles))\n",
     "    components.extend(singles)\n",
+    "    \n",
+    "    # Sort the components by size\n",
+    "    components.sort(reverse = True, key = len)\n",
     "    \n",
     "    return components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "incident-bargain",
+   "execution_count": 128,
+   "id": "occupational-worth",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of singles, 15\n"
+      "Number of singles: 15\n"
      ]
     }
    ],
    "source": [
-    "components = connected_components(output)"
+    "components = connected_components(output)\n",
+    "len(components)\n",
+    "for component in components:\n",
+    "    print(len(component))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "solar-bronze",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "37"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "gross-friendship",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "37"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(components)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "molecular-affiliation",
+   "execution_count": 130,
+   "id": "understood-uruguay",
    "metadata": {},
    "outputs": [
     {
@@ -906,6 +797,19 @@
        "  'cube3_cluster16',\n",
        "  'cube4_cluster4',\n",
        "  'cube5_cluster2'],\n",
+       " ['cube3_cluster19',\n",
+       "  'cube4_cluster14',\n",
+       "  'cube3_cluster20',\n",
+       "  'cube5_cluster7',\n",
+       "  'cube6_cluster3'],\n",
+       " ['cube5_cluster5',\n",
+       "  'cube6_cluster2',\n",
+       "  'cube7_cluster0',\n",
+       "  'cube8_cluster0',\n",
+       "  'cube9_cluster7'],\n",
+       " ['cube4_cluster0', 'cube5_cluster0', 'cube6_cluster0', 'cube6_cluster1'],\n",
+       " ['cube2_cluster17', 'cube3_cluster14', 'cube4_cluster12'],\n",
+       " ['cube3_cluster11', 'cube4_cluster7', 'cube3_cluster12'],\n",
        " ['cube0_cluster1', 'cube1_cluster6'],\n",
        " ['cube0_cluster2', 'cube1_cluster11'],\n",
        " ['cube1_cluster1', 'cube2_cluster6'],\n",
@@ -923,36 +827,38 @@
        " ['cube2_cluster5', 'cube3_cluster8'],\n",
        " ['cube2_cluster10', 'cube3_cluster13'],\n",
        " ['cube2_cluster16', 'cube3_cluster15'],\n",
-       " ['cube2_cluster17', 'cube3_cluster14', 'cube4_cluster12'],\n",
        " ['cube3_cluster3', 'cube4_cluster1'],\n",
        " ['cube3_cluster4', 'cube4_cluster2'],\n",
        " ['cube3_cluster7', 'cube4_cluster3'],\n",
        " ['cube3_cluster9', 'cube4_cluster5'],\n",
-       " ['cube3_cluster11', 'cube4_cluster7', 'cube3_cluster12'],\n",
        " ['cube3_cluster17', 'cube4_cluster16'],\n",
        " ['cube3_cluster18', 'cube4_cluster17'],\n",
-       " ['cube3_cluster19',\n",
-       "  'cube4_cluster14',\n",
-       "  'cube3_cluster20',\n",
-       "  'cube5_cluster7',\n",
-       "  'cube6_cluster3'],\n",
-       " ['cube4_cluster0', 'cube5_cluster0', 'cube6_cluster0', 'cube6_cluster1'],\n",
        " ['cube4_cluster8', 'cube5_cluster1'],\n",
        " ['cube4_cluster10', 'cube5_cluster3'],\n",
        " ['cube4_cluster11', 'cube5_cluster4'],\n",
        " ['cube4_cluster13', 'cube5_cluster6'],\n",
        " ['cube4_cluster15', 'cube5_cluster8'],\n",
        " ['cube4_cluster18', 'cube5_cluster9'],\n",
-       " ['cube5_cluster5',\n",
-       "  'cube6_cluster2',\n",
-       "  'cube7_cluster0',\n",
-       "  'cube8_cluster0',\n",
-       "  'cube9_cluster7'],\n",
        " ['cube8_cluster1', 'cube9_cluster0'],\n",
-       " ['cube8_cluster2', 'cube9_cluster5']]"
+       " ['cube8_cluster2', 'cube9_cluster5'],\n",
+       " ['cube0_cluster3'],\n",
+       " ['cube0_cluster4'],\n",
+       " ['cube0_cluster5'],\n",
+       " ['cube0_cluster6'],\n",
+       " ['cube2_cluster2'],\n",
+       " ['cube2_cluster18'],\n",
+       " ['cube3_cluster10'],\n",
+       " ['cube4_cluster6'],\n",
+       " ['cube4_cluster9'],\n",
+       " ['cube5_cluster10'],\n",
+       " ['cube9_cluster1'],\n",
+       " ['cube9_cluster2'],\n",
+       " ['cube9_cluster3'],\n",
+       " ['cube9_cluster4'],\n",
+       " ['cube9_cluster6']]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "later-modem",
+   "id": "structured-southwest",
    "metadata": {},
    "outputs": [],
    "source": []
