--- a/InterpolationCode/DataInterpolation.ipynb
+++ b/InterpolationCode/DataInterpolation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "decent-walker",
+   "id": "encouraging-multiple",
    "metadata": {},
    "source": [
     "# Imports\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "technological-packet",
+   "id": "involved-particular",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "induced-officer",
+   "id": "level-ballet",
    "metadata": {},
    "source": [
     "# File\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "minimal-sussex",
+   "id": "miniature-handy",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smaller-ability",
+   "id": "growing-dinner",
    "metadata": {},
    "source": [
     "# Filter for your pool\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "liable-solid",
+   "id": "limiting-master",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moral-corruption",
+   "id": "legislative-attraction",
    "metadata": {},
    "source": [
     "# Functions\n",
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "later-hindu",
+   "id": "magnetic-baptist",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "provincial-content",
+   "id": "intellectual-community",
    "metadata": {},
    "source": [
     "# Season by Season Interpolation\n",
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cutting-southeast",
+   "id": "nasty-wellington",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greenhouse-explanation",
+   "id": "supposed-terminal",
    "metadata": {},
    "source": [
     "# Prediction Group by Season and several years\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "other-seafood",
+   "id": "complicated-feelings",
    "metadata": {},
    "outputs": [
     {
@@ -3332,7 +3332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prospective-shame",
+   "id": "reserved-drove",
    "metadata": {},
    "source": [
     "# Prediction group year by year\n",
@@ -3343,7 +3343,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "regular-dutch",
+   "id": "academic-light",
    "metadata": {},
    "outputs": [
     {
@@ -3390,7 +3390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bizarre-universe",
+   "id": "transparent-detector",
    "metadata": {},
    "source": [
     "# Spacial interpolation by year, by season (Casey)"
@@ -3398,7 +3398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prerequisite-trustee",
+   "id": "intelligent-boxing",
    "metadata": {},
    "source": [
     "Load functions - parameter definitons and correct documentation still needs to be completed"
@@ -3406,8 +3406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "every-expression",
+   "execution_count": 4,
+   "id": "explicit-fight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3526,7 +3526,7 @@
     "    # Get rid of locations that dont have the desired variable\n",
     "    column.drop(doesnthavev,inplace = True)\n",
     "    # Get rid of the location we are predicting for if it exists\n",
-    "    column.drop(location,inplace = True)\n",
+    "    column.drop(location,inplace = True,errors=\"ignore\")\n",
     "    #print(type(column))\n",
     "    column.sort_values(inplace = True)\n",
     "    \n",
@@ -3666,7 +3666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affiliated-phase",
+   "id": "golden-extraction",
    "metadata": {},
    "source": [
     "#### Interpolating missing data"
@@ -3675,7 +3675,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "vietnamese-particular",
+   "id": "phantom-sentence",
    "metadata": {},
    "outputs": [
     {
@@ -4131,7 +4131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dramatic-trinity",
+   "id": "contemporary-equality",
    "metadata": {},
    "source": [
     "# Multivariate Regression"
@@ -4139,7 +4139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frank-copper",
+   "id": "demographic-ordinance",
    "metadata": {},
    "source": [
     "Filter for non missing data"
@@ -4148,7 +4148,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "familiar-fabric",
+   "id": "interpreted-chinese",
    "metadata": {},
    "outputs": [
     {
@@ -4175,7 +4175,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "exceptional-dynamics",
+   "id": "accepted-fisher",
    "metadata": {},
    "outputs": [
     {
