Fixed rare bug (thanks Killian)

--- a/TDA_Analysis_Scripts/forrestTDA.ipynb
+++ b/TDA_Analysis_Scripts/forrestTDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f88b7094-878b-4e95-b2a2-d732a252abb4",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "f3764fa8-b9ad-4c5c-bc48-880213a503bd",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "id": "b1107ac8-fcb6-4248-a0a9-4f8656dd993b",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "def cluster_fun(dict_df, DBSCAN_EPSILON = 20, DBSCAN_MIN_SAMPLES = 1, N_CUBES = [10,10], PERC_OVERLAP = [.35,.35]):\n",
+    "def cluster_fun(dict_df, DBSCAN_EPSILON = 20, DBSCAN_MIN_SAMPLES = 1, N_CUBES = [7,7], PERC_OVERLAP = [.30,.30]):\n",
     "    \"\"\"\n",
     "    How to cluster the data\n",
     "\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "id": "4c1be21d-c22a-4686-8fec-e28127311d64",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "62c1c140-5bc8-4d31-863d-01faf88cd798",
    "metadata": {
     "scrolled": true,
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "aae883ec-eb42-4622-a553-d4fad2fc9307",
    "metadata": {},
    "outputs": [],
@@ -613,7 +613,7 @@
     "import json\n",
     "\n",
     "\n",
-    "json = json.dumps(mapper_pca_output_dict)\n",
+    "json = json.dumps(mapper_output_dict)\n",
     "f = open(r\"C:\\Users\\forre\\Desktop\\REU\\TDA\\Data\\TDAOutputs\\2PCA30Perc7Cube.json\",\"w\")\n",
     "f.write(json)\n",
     "f.close()"
